# B3Analyzer

./: .gitignore  Home2.py  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
classes/: Rendimentos.py
libs/: Acoes.py  Bdr.py  Fii.py  Futuros.py  PrecoMedio.py  Rendimentos.py  Tabelas.py  data_cleaning.py
main/: Home.py  Home2.py  app.py
main/classes/utils/: const.py  data_cleaning.py
